SERVER-91832: Compile CyrusSaslClientSession and sasl_sspi only on mongo shell and unit tests (#24718)

GitOrigin-RevId: 353399088e32667be0490a4e280527fc6a9b9e17